--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -1,34 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
- <title>Autenticación app</title>
-  
- <link rel="stylesheet"
-   href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
-  <style>
-    #dvcht{display:none;}
-  </style>
-  <script src="https://code.jquery.com/jquery.js"></script>
-  
-</head>
-<body>
-  
-  
- <div class="container">
- <h1>Profile page:</h1>
-   <hr>
-<p>User info</p>
-<p>id: <%= user._id %></p>
-<p>email: <%= user.email %></p>
-<p>password: <%= user.password %></p>
-   <div>
- <a href="/logout" class="btn btn-info btn-lg pull-right">Logout</a>
+<nav class="navbar navbar-default">
+<div class="container">
+ <div class="navbar-header">
+ <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+ <span class="sr-only">Toggle navigation</span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+ </button>
+
+<a class="navbar-brand" href="#">node autenticacion app</a>
+
+ </div>
+
+<div id="navbar" class="collapse navbar-collapse">
+ <ul class="nav navbar-nav navbar-right">
+<li>{{user.name}}</li>   
+<li><a href="">{{user.email}}</a></li>
+<li><a href="" ng-click="logout()" >Logout</a></li>
+ </ul>
+</div><!-- /.nav-collapse -->
+
 </div>
-   <hr>
-  <p><a href="/">Home</a></p>
+</nav>
+
+<h1>profile</h1>
+
+<div class="row">
+ <div class="col-sm-8 col-sm-offset-2">
+<div class="well">
+<h3>User Profile Page</h3>
+<p>
+ <strong>id</strong>: {{user._id}}<br> 
+ <strong>name</strong>: {{user.name}}<br>
+ <strong>email</strong>: {{user.email}}<br>
+ <strong>password</strong>: {{user.password}}<br> 
+</p>
 </div>
-  
-  <input type="button" id="btcht"
+<hr>
+<a ng-click="logout()" class="btn btn-warning btn-lg btn-block">Logout</a>
+</div>
+</div>
+
+ <input type="button" id="btcht"
  value="chat">
   <div id="dvcht">
     
@@ -97,8 +110,4 @@ $dvchtu.html(html);
 })//skon usernames
               
 })//jQuery
-  </script>            
-  
-</body>
-
-</html>
+  </script> 
