renamed bestalk, depurando scripts

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -43,16 +43,20 @@
 </style>
 
 <div id="dvti">
-  <h1 id="h1ti">BingoLingo</h1>
+  <h1 id="h1ti">BesTalk</h1>
    <div id="dvlg" 
                ><a
  href="#/login">Login</a></div>
 </div><!-- header -->
   
+<style>
+  #dvmed{background-color:#ffffe0;}
+</style>
+
   <div id="dvmed">
    
 <div id="dvmtxsgnu">
-<h2>Welcome to BingoLingo</h2>
+<h2>Welcome to BesTalk</h2>
 <h3>A language exchange page where you can chat, play games, learn lessons and more.</h3>
 </div>
     
