--- a/client/login/login.html
+++ b/client/login/login.html
@@ -1,6 +1,8 @@
 <style>
 
-  #dvmed{text-align:center;}
+  #dvmed{
+    text-align:center;
+    background-color:#ffffe0;}
   
   h2{font-family:arial}
     
@@ -17,7 +19,7 @@
 </style>
 
 <div id="dvti">
-  <h1 id="h1ti">BingoLingo</h1>
+  <h1 id="h1ti">BesTalk</h1>
    
 </div><!-- header -->
   
@@ -26,12 +28,12 @@
  
     <div id="dvmtx">
 
-      <h2>Join to BingoLingo</h2>
+      <h2>Join to BesTalk</h2>
 </div>  
     
 <div id="dvmlgi">
 
-<h2>BingoLingo</h2>
+<h2>BesTalk</h2>
   
   
   <div ng-show="msg">{{msg}}</div>
@@ -50,7 +52,7 @@
 
 <button type="submit" ng-click="logiN()">Login</button><br>
 
-<p>Don't have a BingoLingo account yet? <a 
+<p>Don't have a BesTalk account yet? <a 
  href="#/signup">Sign up!</a></p>
 
 </form>
