--- a/client/directive/fondo.html
+++ b/client/directive/fondo.html
@@ -12,13 +12,13 @@
   <div id="dvfnd">
     Supported by <a href="https://glitch.com/" target="_blank">glitch.com</a>
     /
-      source code: <a href="https://glitch.com/edit/#!/bingolingo-test?path=README.md:1:0" target="_blank">code</a>
+      source code: <a href="https://glitch.com/edit/#!/bestalk-test?path=README.md:1:0" target="_blank">code</a>
       /
       send your : <a href="https://shrib.com/#bingolingo-suggestions" target="_blank">Suggestion</a>
       <br>
       Made with 
       <img src="https://png.icons8.com/potato/color/24" title="Potato" width="24" height="24">
-       by BingoLingo Team      
+       by BesTalk Team      
    
 </div><!-- footer / Visit the stable page: <a href="https://bingolingo.glitch.me" target="_blank">BingoLingo</a>
       <br> -->
