--- a/client/index.html
+++ b/client/index.html
@@ -1,64 +1,58 @@
 <!DOCTYPE html>
 <html ng-app="laApp">
 <head>
-<meta name="description" content="BingoLingo, front page">
+  
+<meta name="description"
+      content="BingoLingo, a exchange language page">
+  
   <meta charset="utf-8">
   <!--<base href="/">-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport"
+        content="width=device-width">
   
   <link id="favicon" rel="icon"
-  href="https://cdn.glitch.com/55f963f5-bf15-449c-b526-e46a7cd2b96f%2Fbingolingovene.ico?1509504155870"
+  href="https://cdn.glitch.com/55f963f5-bf15-449c-b526-e46a7cd2b96f%2Fbestalk.ico?1510337808718"
         type="image/x-icon">
-  <title>BingoLingo!</title>
+  
+  <title>BesTalk!</title>
 
   <!-- <link rel="stylesheet" href="/style.css"> -->
   <!--<script src="https://code.jquery.com/jquery.js"></script>-->
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  
 
-
+<link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
+  
+<link rel="stylesheet" href="/styles/head.css">
   
 <style>
-  *{box-sizing:border-box;}
-  
- html{
-   height:100%;
-  border:1px dotted grey;margin:0px;} 
-  
- body{
-   /*display:flex;flex-direction:column;*/
-   height:100%; width:100%;
-  border:1px solid grey;margin:0px;
-   background-color:#f0f8ff;}/*#e6e6fa*/
-
-  #dvngvw{
-    display:flex;flex-direction:column;
-    height:100%; width:100%;
-   margin:0px;}
-  
-  div{margin:5px;}
+ 
 
 /*style header..*/
 #dvti{
-  text-align:center;
+  /*text-align:center;*/
  border:1px solid grey;border-radius:5px 55px;
-  background-color:#00ff7f;}
+  
+  background-color:#3CB371;}/*#00ff7f #006400 #ff4500 #00ff00*/
   
   #h1ti{
    display:inline-block;
+    position:relative;left:50px;
   margin:auto;
-   font-family:arial;
+   font-family:"Playball",cursive;font-size:66px;
    color:black;}
   
 #dvlg{
+       text-align:center;
        position:absolute;top:15px;right:20px;
       border:1px solid grey;border-radius:5px;
-       background-color:white;color:black;
+       background-color:#5F9EA0;color:black;
        cursor:pointer;}
 
 @media only screen and (max-width:425px){
@@ -105,7 +99,7 @@
 <script src="home/home.js"></script>
 <script src="login/login.js"></script>
 <script src="profile/profile.js"></script>
-  <script src="edit/edit.js"></script>
+  
   
 </body>
 </html>
