--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,13 @@
       content="BingoLingo, a exchange language page">
   
   <meta charset="utf-8">
-  <!--<base href="/">-->
+  <!--<base href="/" />-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport"
         content="width=device-width">
   
   <link id="favicon" rel="icon"
-  href="https://cdn.glitch.com/55f963f5-bf15-449c-b526-e46a7cd2b96f%2Fbestalk.ico?1510337808718"
+  href="https://cdn.glitch.com/55f963f5-bf15-449c-b526-e46a7cd2b96f%2Fbestalk3.ico?1510786478398"
         type="image/x-icon">
   
   <title>BesTalk!</title>
@@ -39,7 +39,7 @@
   /*text-align:center;*/
  border:1px solid grey;border-radius:5px 55px;
   
-  background-color:#3CB371;}/*#00ff7f #006400 #ff4500 #00ff00*/
+  background-color:#9370DB;}/*#00ff7f #006400 #ff4500 #00ff00 #3CB371*/
   
   #h1ti{
    display:inline-block;
@@ -52,7 +52,8 @@
        text-align:center;
        position:absolute;top:15px;right:20px;
       border:1px solid grey;border-radius:5px;
-       background-color:#5F9EA0;color:black;
+       font-weight:bold;
+       background-color:#9370DB;color:black;
        cursor:pointer;}
 
 @media only screen and (max-width:425px){
