--- a/client/directive/fondo.html
+++ b/client/directive/fondo.html
@@ -2,7 +2,8 @@
 /*style footer..*/
  
   #dvfnd{
-    border:1px solid grey;border-radius:5px 20px;
+    border:1px solid grey;
+      border-radius:5px 20px;
     font-family:arial;font-size:14px;
     background-color:#aaa;}
   
