--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,8 @@
   
   <meta charset="utf-8">
   <!--<base href="/" />-->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible"
+        content="IE=edge">
   <meta name="viewport"
         content="width=device-width">
   
@@ -19,11 +20,11 @@
 
   <!-- <link rel="stylesheet" href="/style.css"> -->
   <!--<script src="https://code.jquery.com/jquery.js"></script>-->
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
   
 
@@ -31,34 +32,40 @@
   
 <link rel="stylesheet" href="/styles/head.css">
   
+  
 <style>
  
-
 /*style header..*/
 #dvti{
   /*text-align:center;*/
- border:1px solid grey;border-radius:5px 55px;
-  
-  background-color:#9370DB;}/*#00ff7f #006400 #ff4500 #00ff00 #3CB371*/
+ border:1px solid grey;
+    border-radius:5px 55px;
+  background-color:#9370DB;}
+  /*#00ff7f #006400 #ff4500 #00ff00 #3CB371*/
   
   #h1ti{
    display:inline-block;
     position:relative;left:50px;
   margin:auto;
-   font-family:"Playball",cursive;font-size:66px;
+   font-family:"Playball",cursive;
+      font-size:66px;
    color:black;}
   
 #dvlg{
        text-align:center;
-       position:absolute;top:15px;right:20px;
-      border:1px solid grey;border-radius:5px;
+       position:absolute;
+         top:15px;right:20px;
+      border:1px solid grey;
+        border-radius:5px;
        font-weight:bold;
-       background-color:#9370DB;color:black;
+       background-color:#9370DB;
+         color:black;
        cursor:pointer;}
 
 @media only screen and (max-width:425px){
     #dvlg{
-      position:relative;top:auto;right:auto;
+      position:relative;
+        top:auto;right:auto;
       width:50%;
      margin:auto;
      }
@@ -69,7 +76,8 @@
 /*style middle..*/
   #dvmed{
     height:100%;
-   border:1px solid grey;border-radius:5px;}
+   border:1px solid grey;
+      border-radius:5px;}
   
 /*..style middle*/
    
@@ -80,7 +88,6 @@
 
  
 
-  
   <div id="dvngvw" ng-view></div>
   
  
