multiple cht prv corriendo, ahora historial chtprv

--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -117,7 +117,7 @@
   <div id="dvchtrnm">Rooms</div>
   <div id="dvchtrc">
   <li id="lige"
-      onclick="entrgnrL()">General</li>
+      onclick="entrgnrL('gnrl')">General</li>
   </div>
 </div><!-- dv rooms -->
           
