--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
   
 
-<link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+<link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Playball">
   
 <link rel="stylesheet" href="/styles/head.css">
   
