estilo cambiado, fix funcionamiento

--- a/client/directive/fondo.html
+++ b/client/directive/fondo.html
@@ -1,3 +1,4 @@
+<!-- 
 <style>
 /*style footer..*/
  
@@ -8,15 +9,27 @@
     background-color:#aaa;}
   
 /*..style footer*/
+</style> -->
+
+<style>
+/*style fondo..*/
+#dvfnd{
+    width:100%;
+    /*border:1px solid;*/
+      border-radius:5px 5px 0 0;
+    background-color:black;
+      color:white;}
+/*..style fondo*/
 </style>
+
   
   <div id="dvfnd">
     Supported by <a href="https://glitch.com/" target="_blank">glitch.com</a>
     /
-      source code: <a href="https://glitch.com/edit/#!/bestalk-test?path=README.md:1:0" target="_blank">code</a>
-      /
+      
       send your : <a href="https://shrib.com/#bingolingo-suggestions" target="_blank">Suggestion</a>
-      <br>
+    / 
+      
       Made with 
       <img src="https://png.icons8.com/potato/color/24" title="Potato" width="24" height="24">
        by BesTalk Team      
