--- a/client/index.html
+++ b/client/index.html
@@ -32,12 +32,42 @@
   
 <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Playball">
-  
+ <!--  
 <link rel="stylesheet" href="/styles/head.css">
+  --> 
+ 
+ 
+<style>
+/*style basic page..*/
+*{box-sizing:border-box;}
+
+html{
+    height:100%;/*min-height:100%*/
+    /*border:1px solid;*/
+      margin:0px;}
+body{
+    /*display:flex;
+      flex-direction:column;
+      align-items:center;*/
+    height:100%;width:100%;
+   /*border:1px dotted;*/
+      margin:0px;
+    background-color:grey;}
   
+  #dvngvw{
+    display:flex;
+      flex-direction:column;
+      align-items:center;
+    height:100%; width:100%;
+   margin:0px;}
+  
+/*..style basic page*/
+</style>  
+  
+  <!-- 
   
 <style>
- 
+
 /*style header..*/
 #dvti{
   /*text-align:center;*/
@@ -85,7 +115,7 @@
 /*..style middle*/
    
   </style>
-  
+   -->
 </head>
 <body>
 
