alert tab listo, ahora juegos

--- a/client/directive/fondo.html
+++ b/client/directive/fondo.html
@@ -1,22 +1,9 @@
-<!-- 
-<style>
-/*style footer..*/
- 
-  #dvfnd{
-    border:1px solid grey;
-      border-radius:5px 20px;
-    font-family:arial;font-size:14px;
-    background-color:#aaa;}
-  
-/*..style footer*/
-</style> -->
 
 <style>
 /*style fondo..*/
 #dvfnd{
     width:100%;
     /*border:1px solid;*/
-      border-radius:5px 5px 0 0;
     background-color:black;
       color:white;}
 /*..style fondo*/
@@ -24,7 +11,7 @@
 
   
   <div id="dvfnd">
-    Supported by <a href="https://glitch.com/" target="_blank">glitch.com</a>
+    Powered by <a href="https://glitch.com/" target="_blank">glitch.com</a>
     /
       
       send your : <a href="https://shrib.com/#bingolingo-suggestions" target="_blank">Suggestion</a>
