--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,21 @@
 <html ng-app="laApp">
 <head>
   
+  
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110169179-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110169179-1');
+</script>
+  
+  
+  
 <meta name="description"
-      content="BingoLingo, a exchange language page">
+      content="BesTalk, a exchange language website">
   
   <meta charset="utf-8">
   <!--<base href="/" />-->
@@ -13,7 +26,7 @@
         content="width=device-width">
   
   <link id="favicon" rel="icon"
-  href="https://cdn.glitch.com/55f963f5-bf15-449c-b526-e46a7cd2b96f%2Fbestalk4.ico?1511188403382"
+  href="https://cdn.glitch.com/55f963f5-bf15-449c-b526-e46a7cd2b96f%2Fbstlk.ico?1511655349997"
         type="image/x-icon">
   
   <title>BesTalk!</title>
@@ -32,9 +45,7 @@
   
 <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Playball">
- <!--  
-<link rel="stylesheet" href="/styles/head.css">
-  --> 
+
  
  
 <style>
@@ -52,7 +63,7 @@ body{
     height:100%;width:100%;
    /*border:1px dotted;*/
       margin:0px;
-    background-color:grey;}
+    background-color:white;}
   
   #dvngvw{
     display:flex;
@@ -64,58 +75,7 @@ body{
 /*..style basic page*/
 </style>  
   
-  <!-- 
-  
-<style>
-
-/*style header..*/
-#dvti{
-  /*text-align:center;*/
- border:1px solid grey;
-    border-radius:5px 55px;
-  background-color:#9370DB;}
-  /*#00ff7f #006400 #ff4500 #00ff00 #3CB371*/
-  
-  #h1ti{
-   display:inline-block;
-    position:relative;left:50px;
-  margin:auto;
-   font-family:"Playball",cursive;
-      font-size:66px;
-   color:black;}
-  
-#dvlg{
-       text-align:center;
-       position:absolute;
-         top:15px;right:20px;
-      border:1px solid grey;
-        border-radius:5px;
-       font-weight:bold;
-       background-color:#9370DB;
-         color:black;
-       cursor:pointer;}
-
-@media only screen and (max-width:425px){
-    #dvlg{
-      position:relative;
-        top:auto;right:auto;
-      width:50%;
-     margin:auto;
-     }
-    }/*media, si min hasta max400px*/
-
-/*..style header*/
  
-/*style middle..*/
-  #dvmed{
-    height:100%;
-   border:1px solid grey;
-      border-radius:5px;}
-  
-/*..style middle*/
-   
-  </style>
-   -->
 </head>
 <body>
 
@@ -138,7 +98,6 @@ body{
   
   <script src="app.js"></script>
 <script src="home/home.js"></script>
-<script src="login/login.js"></script>
 <script src="profile/profile.js"></script>
   
   
