recuperar password funcionando, segui games

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -177,7 +177,7 @@
 
   <p>Don't have a BesTalk account yet? <span id="spsgnu" onclick="shwlgisgnU(dvsgnu)">Sign up!</span></p>
   
-  <a href="">Forgot password?</a><br>
+  <a href="" ng-click="fgtpwD()">Forgot password?</a><br>
   <!-- <a 
  href="#/signup">Sign up!</a> -->
 
