--- a/client/home/home.html
+++ b/client/home/home.html
@@ -10,7 +10,7 @@
     width:100%;
     border-bottom:1px solid white;
     /*border:1px solid;*/
-    background-color:#DDA0DD;}
+    background-color:#1F3348;/*#9370DB;/*#DDA0DD;*/}
 
 #dvhd:after{
  display:block;
@@ -36,7 +36,8 @@
     /*border:1px solid;*/
       margin:0px;
     font-family:"Playball",cursive;
-      font-size:50px;}
+      font-size:50px;
+    color:#e0ccb7;}
 /*..style head*/  
 </style>
 
@@ -58,7 +59,7 @@
     height:100%;width:100%;
     /*border:1px solid;*/
       box-shadow:0 0 5px #444;
-    background-color:#D8BFD8;}
+    background-color:#e0ccb7;/*#D8BFD8;*/}
   
   
   #h2wlc{
