--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
   
   
 <meta name="description"
-      content="BesTalk, a exchange language website">
+      content="BesTalk, learning languages on the Best way">
   
   <meta charset="utf-8">
   <!--<base href="/" />-->
@@ -33,18 +33,17 @@
 
   <!-- <link rel="stylesheet" href="/style.css"> -->
   <!--<script src="https://code.jquery.com/jquery.js"></script>-->
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
   
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
   
+<!--  
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+<!--  
 <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Playball">
+
+ --> 
 
  
 
@@ -94,16 +93,28 @@ body{
 
 
   
+    
+ <!--  
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
   
-  <!--<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
+<script 
+src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   
-  
+
+   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script> 
+ 
 
   
   <script src="app.js"></script>
 <script src="home/home.js"></script>
 <script src="profile/profile.js"></script>
-  
+   
   
 </body>
 </html>
