--- a/client/home/home.html
+++ b/client/home/home.html
@@ -362,8 +362,7 @@ function valpW(){
       by BesTalk Team</span> 
     
     <span id="spinf" title="info"
-          onclick="inF()"><img src="https://png.icons8.com/metro/50/ffffff/info.png"
-                               title="Info" width="24" height="24"></span>
+          onclick="inF()"><svg width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1152 1376v-160q0-14-9-23t-23-9h-96v-512q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v160q0 14 9 23t23 9h96v320h-96q-14 0-23 9t-9 23v160q0 14 9 23t23 9h448q14 0 23-9t9-23zm-128-896v-160q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v160q0 14 9 23t23 9h192q14 0 23-9t9-23zm640 416q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z" fill="#fff"/></svg></span><!-- info-circle -->
    
 </div><!-- footer / Visit the stable page: <a href="https://bingolingo.glitch.me" target="_blank">BingoLingo</a>
       <br> -->
