--- a/client/index.html
+++ b/client/index.html
@@ -14,16 +14,22 @@
 </script>
   
   
-  
-<meta name="description"
-      content="BesTalk, learning languages on the Best way">
-  
   <meta charset="utf-8">
   <!--<base href="/" />-->
   <meta http-equiv="X-UA-Compatible"
         content="IE=edge">
   <meta name="viewport"
-        content="width=device-width">
+        content="width=device-width">  
+  
+  
+<meta name="description"
+      content="BesTalk, learning languages on the Best way">
+ 
+
+<meta property="og:title" content="BesTalk!">
+<meta property="og:description" content="The best of language exchange websites">
+<meta property="og:site_name" content="BesTalk" />
+  
   
   <link id="favicon" rel="icon"
   href="https://cdn.glitch.com/55f963f5-bf15-449c-b526-e46a7cd2b96f%2Fbstlk.ico?1511655349997"
