alguna depuracion de cht rooms, aun quedando juegos

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html ng-app="laApp">
 <head>
   
-  
+<!-- heroku -->  
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110169179-1"></script>
+<scLript async src="https://www.googletagmanager.com/gtag/js?id=UA-110169179-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -12,6 +12,7 @@
 
   gtag('config', 'UA-110169179-1');
 </script>
+  
   
   
   <meta charset="utf-8">
@@ -22,13 +23,26 @@
         content="width=device-width">  
   
   
+<meta name="author"
+ content="BesTalk">
+<meta name="keywords"
+ content="BesTalk, Chat, Voice Chat, Games, Language Exchange, Intercambio de Idiomas, Learn Languages, Language Learning, Learn English, Talk">
 <meta name="description"
-      content="BesTalk, learning languages on the Best way">
+ content="When you use BesTalk, you can chat in language rooms as well voice call them in private chats.You can also play word games  being this a amusing way to exchange languages with other BesTalk users around the world.">
  
 
-<meta property="og:title" content="BesTalk!">
-<meta property="og:description" content="The best of language exchange websites">
-<meta property="og:site_name" content="BesTalk" />
+<meta property="og:url"
+ content="https://bestalk.herokuapp.com">
+<meta property="og:title"
+ content="BesTalk!">
+<meta property="og:site_name"
+ content="BesTalk">
+<meta property="og:type"
+ content="website">
+<meta property="og:image"
+ content="">
+<meta property="og:description"
+ content="The best of language exchange websites">
   
   
   <link id="favicon" rel="icon"
@@ -37,11 +51,7 @@
   
   <title>BesTalk!</title>
 
-  <!-- <link rel="stylesheet" href="/style.css"> -->
-  <!--<script src="https://code.jquery.com/jquery.js"></script>-->
-  
-  
- 
+   
   
 <!--  
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
@@ -52,7 +62,6 @@
  --> 
 
  
-
  
   
   
@@ -98,10 +107,7 @@ body{
   <!-- <script src="/client.js"></script> -->
 
 
-  
-    
- <!--  
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
+ 
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
