superposicion de ventanas, ahora orden de ideas

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -221,7 +221,24 @@ c26 42 28 93 4 128 -9 15 -41 45 -70 68 -64 51 -79 83 -57 118 19 29 58 45 90
    
 
 <h2 id="h2wlc">Welcome to BesTalk</h2>
-<h3 id="h3msg">A language exchange page where you can chat, play games, learn lessons and more.</h3>
+<h3 id="h3msg">A language exchange website in development which will bring us the best of SharedLingo, SharedTalk and LiveMocha...</h3>
+  
+<h4>Working Features:</h4>
+
+<h3>Chat:</h3>
+<ul>
+<li>Language rooms, theme rooms and secret rooms.</li>
+<li>Private chat, with option to voice call.</li>
+<li>Emojies :) :smile:</li>
+</ul>
+
+<h3>Game:</h3>
+<ul>
+<li>Explain the word.</li>
+</ul>
+
+<h5>And more in construction...</h5>    
+    
 
 <!-- heroku -->    
 <h1 id="h1info">First release running on: <a href="https://bestalk.herokuapp.com" target="_self">BesTalk.herokuapp.com</a></h1>
