pestaña de traductor y nota, ahora perfil

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -32,7 +32,7 @@
 }/*@keyframes*/
 
 #h1tit{
-    display:inline-block;
+    display:none;/*inline-block;*/
     /*border:1px solid;*/
       margin:0px;
     font-family:"Playball",cursive;
@@ -41,6 +41,7 @@
 /*..style head*/  
 </style>
 
+<h1 id="h1tit" >BesTalk</h1>
 
 <div id="dvhd">
 <!-- <h1 id="h1tit">BesTalk</h1> -->
