ver perfil, ahora juegos

--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -933,6 +933,7 @@ slthm.onchange=function(){
       text-align:center;
       background-color:black;
         color:white;
+      cursor:move;
     }
     #dvntscon{
       display:flex;
@@ -953,7 +954,7 @@ slthm.onchange=function(){
     <div id="dvntswrp">
     <div id="dvnts">
       
-    <div id="dvntstit">Notes</div>
+    <div id="dvntstit">Your Notes</div>
       
     <div id="dvntscon">
     <textarea id="tantscon" readonly>{{user.notes||"edit..."}}</textarea>
