acomodando,, y arreglar errores of undefined

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -53,8 +53,8 @@
 <!-- <h1 id="h1tit">BesTalk</h1> -->
   
   <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
- width="311" height="65" viewBox="0 0 571.000000 125.000000"
- preserveAspectRatio="xMidYMid meet">
+ width="311" height="65" viewbox="0 0 571.000000 125.000000"
+ preserveaspectratio="xMidYMid meet">
 <metadata>
 BesTalk, the best of exchange language websites.
 </metadata>
@@ -111,8 +111,8 @@ c26 42 28 93 4 128 -9 15 -41 45 -70 68 -64 51 -79 83 -57 118 19 29 58 45 90
 <span id="splgi"
  onclick="mstlgI()">
 <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
- width="50px" height="50px" viewBox="0 0 139.000000 142.000000"
- preserveAspectRatio="xMidYMid meet">
+ width="50px" height="50px" viewbox="0 0 139.000000 142.000000"
+ preserveaspectratio="xMidYMid meet">
 <g transform="translate(0.000000,142.000000) scale(0.100000,-0.100000)"
 fill="#000000" stroke="none">
 <path d="M601 1134 c-74 -27 -157 -84 -206 -142 l-24 -29 48 -26 48 -26 37 38
@@ -131,8 +131,8 @@ c20 21 56 47 79 59 89 44 226 45 312 1 62 -32 130 -105 160 -171 38 -84 38
 <span id="spsgu"
  onclick="mstsgU()">
 <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
- width="50px" height="50px" viewBox="0 0 147.000000 135.000000"
- preserveAspectRatio="xMidYMid meet">
+ width="50px" height="50px" viewbox="0 0 147.000000 135.000000"
+ preserveaspectratio="xMidYMid meet">
 <g transform="translate(0.000000,135.000000) scale(0.100000,-0.100000)"
 fill="#000000" stroke="none">
 <path d="M612 1119 c-50 -25 -107 -88 -123 -136 -6 -19 -9 -64 -7 -99 5 -75
@@ -307,7 +307,7 @@ fill="#000000" stroke="none">
     <h5>And more in construction... <span id="spjoinus" onclick="mstsgU()">Join us!</span></h5><br>   
     
 
-<!-- heroku -->    
+<!-- 2c.. heroku -->    
 <h1 id="h1info">First release running on: <a href="https://bestalk.herokuapp.com" target="_self">BesTalk.herokuapp.com</a></h1><br>
 <h3>this the Beta Version:</h3><br>
 
@@ -324,7 +324,7 @@ fill="#000000" stroke="none">
 <!-- <h2 id="h2login">BesTalk</h2>  -->
   
   
-  <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="271" height="25" viewBox="0 0 371.000000 125.000000" preserveAspectRatio="xMidYMid meet">
+  <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="271" height="25" viewbox="0 0 371.000000 125.000000" preserveaspectratio="xMidYMid meet">
 <metadata>
 BesTalk, the best of exchange language websites.
 </metadata>
@@ -485,7 +485,7 @@ dvlgisguscr.addEventListener("click",function(){
       by BesTalk Team</span> 
     
     <span id="spinf" title="info"
-          onclick="inF()"><svg width="16" height="16" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1152 1376v-160q0-14-9-23t-23-9h-96v-512q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v160q0 14 9 23t23 9h96v320h-96q-14 0-23 9t-9 23v160q0 14 9 23t23 9h448q14 0 23-9t9-23zm-128-896v-160q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v160q0 14 9 23t23 9h192q14 0 23-9t9-23zm640 416q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z" fill="#fff"/></svg></span><!-- info-circle -->
+          onclick="inF()"><svg width="16" height="16" viewbox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1152 1376v-160q0-14-9-23t-23-9h-96v-512q0-14-9-23t-23-9h-320q-14 0-23 9t-9 23v160q0 14 9 23t23 9h96v320h-96q-14 0-23 9t-9 23v160q0 14 9 23t23 9h448q14 0 23-9t9-23zm-128-896v-160q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v160q0 14 9 23t23 9h192q14 0 23-9t9-23zm640 416q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z" fill="#fff"/></svg></span><!-- info-circle -->
    
 </div><!-- footer -->
 
