--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html ng-app="laApp">
 <head>
   
-<!-- heroku -->  
+<!-- 1c.. heroku -->  
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110169179-1"></script>
 <script>
