depurado y cambiado nombres,, ahora agregacion

--- a/client/index.html
+++ b/client/index.html
@@ -79,7 +79,7 @@ body{
   margin:0px;
   background-color:white;}
   
-#dvngvw{
+#dvngview{
   /*display:flex;
     flex-direction:column;
     align-items:center;*/
@@ -96,7 +96,7 @@ body{
 
  
 
-<div id="dvngvw" ng-view></div>
+<div id="dvngview" ng-view></div>
   
  
 
