--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,4 +1,8 @@
- <!-- efectos navidad 
+<!--
+fecha: 16-09-18
+-->
+
+<!-- efectos navidad 
  <script type="text/javascript" src="/scripts/snow.js"></script> -->
 
 <style>
