--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html ng-app="laApp">
-<head>
+<!-- 
+fecha: 16-09-18
+-->
+  <head>
   
 <!-- 1c.. heroku -->  
 <!-- Global site tag (gtag.js) - Google Analytics -->
