hangman pa publica

--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -554,7 +554,7 @@ function cambiar_tema(){
 <input type="button" value="Explain The Word" id="btncrtgm"
        onclick="mostrar_etwgameopt()">
 <input type="button"
-       value="jugar hangman"
+       value="Hangman"
        onclick="jugar_hangman()">  
   <br>  
     
