--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,17 @@ fecha: 16-09-18
   <head>
   
 <!-- 1c.. heroku -->  
+<!-- Global site tag (gtag.js) - Google Analytics 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110169179-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110169179-2');
+</script>    -->
+    
+<!-- glitch.. -->    
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110169179-1"></script>
 <script>
