--- a/client/home/home.html
+++ b/client/home/home.html
@@ -248,9 +248,9 @@ text-decoration:underline;
 <h5>And more in construction... <span id="spjoinus" onclick="mostrar_signup()">Join us!</span></h5><br>   
     
 
-<!-- 2c.. heroku -->    
+<!-- 2c.. heroku    
 <h1 id="h1info">First release running on: <a href="https://bestalk.herokuapp.com" target="_self">BesTalk.herokuapp.com</a></h1><br>
-<h3>this the Beta Version:</h3><br>
+<h3>this the Beta Version:</h3><br> --> 
 
 
     
